tests/checker/diagnostics/0767_polyvar_unsafe_narrowing_coercion_01.ml.infer.expected
File "0767_polyvar_unsafe_narrowing_coercion_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0767_polyvar_unsafe_narrowing_coercion_01 is not a valid module name.

File "0767_polyvar_unsafe_narrowing_coercion_01.ml", line 2, characters 2-15:
2 |   (x :> [ `A ])
      ^^^^^^^^^^^^^
Error: Type [ `A | `B ] is not a subtype of [ `A ]
       The second variant type does not allow tag(s) `B
